--- a/NJsonSchema.CodeGeneration.CLI/packages.config
+++ b/NJsonSchema.CodeGeneration.CLI/packages.config
@@ -1,8 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="CommandLineArgumentsParser" version="3.0.3" targetFramework="net461" />
-  <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net461" />
-  <package id="NJsonSchema" version="2.41.6006.20160" targetFramework="net461" />
-  <package id="NJsonSchema.CodeGeneration" version="2.41.6006.20162" targetFramework="net461" />
-  <package id="ReflectionBridge" version="0.0.11" targetFramework="net461" />
+  <package id="CommandLineArgumentsParser" version="3.0.10" targetFramework="net461" />
+  <package id="Microsoft.CSharp" version="4.3.0" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net461" />
+  <package id="NJsonSchema" version="9.1.1" targetFramework="net461" />
+  <package id="NJsonSchema.CodeGeneration" version="9.1.1" targetFramework="net461" />
+  <package id="NJsonSchema.CodeGeneration.CSharp" version="9.1.1" targetFramework="net461" />
+  <package id="NJsonSchema.CodeGeneration.TypeScript" version="9.1.1" targetFramework="net461" />
+  <package id="ReflectionBridge" version="0.0.12" targetFramework="net461" />
 </packages>
